# University

./: README.md
Basi di Dati/Appunit latex/: senza-nome-1.tex
Basi di Dati/Laboratorio/: e4 (da finire).sql
Basi di Dati/Test SQL/Test fatti/: Resoconto.txt
Basi di Dati/esercitazioni/: e14.sql
Basi di Dati/esercitazioni/e4/: e4AQL copy.sql  e4AQL.sql
Basi di Dati/esercitazioni/e5/: e5.sql  e6.sql  script5.sql
Basi di Dati/esercitazioni/e6/: e6(query).sql
Economia/Drive (Ingegneri desperados)/Appunti/: AppuntiTipiSocieta.docx
Economia/Drive (Ingegneri desperados)/Esami/: template_esame.tex
Fondamenti di Informatica 2/: .Esercizi algoritmi.pdf.icloud  .Esercizi modelli.pdf.icloud  .Goodrich, Michael T._ Tamassia, Roberto - Strutture dati e algoritmi in Java-Zanichelli (2015).pdf.icloud
Fondamenti di Informatica 2/Esami/2019 Settembre/: studente.txt
Fondamenti di Informatica 2/Esami/2021 Luglio/: q2.txt  q3.txt
Primo Semestre/SdC2/Laboratorio/: comandiDocker.txt
Primo Semestre/Telecomunicazioni/Esami telecomunicazioni/: Esercizio_13_07_23.docx  Esercizio_Gennaio_23.docx
Primo Semestre/Telecomunicazioni/Esercizi Capitoli/: Esercizi Capitolo 4.pptx
Primo Semestre/Telecomunicazioni/FCI_23-24 Moodle/: Programma con argomenti svolti.docx
Primo Semestre/Telecomunicazioni/script/: quiztele.py  readme.txt
Reti di Calcolatori/Laboratorio/Esercizi in aula/: 5marzo.c
SdC2/Esami SDC2/Esame SDC2 2021-06-11/: teoria1.txt
SdC2/Laboratorio/2/code/: performance.c  (+2 more)
Sistemi Operativi/: comandiDocker.txt
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/02_so_game/: CMakeLists.txt  Makefile  Makefile_direct  Makefile_pkgconfig  so_game.c  vec3.c  world.c
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/exercise/mini_core/: CMakeLists.txt
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/exercise/mini_core/executables/: many_object_in_stack_example.cpp
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/exercise/mini_core/src/: CMakeLists.txt
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/exercise/mini_core/src/messages/: odometry_message.cpp  pose_message.h
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/exercise/mini_core/src/utils/: blob.cpp  blob.h  deserializer.h  id_context.cpp  identifiable.cpp  object_data.h  property_container.h  property_container_manager.h  property_identifiable.cpp  property_vector.h  serializable.h  serialization_context.h  serializer.cpp  serializer.h
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/solution/mini_core/: CMakeLists.txt
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/solution/mini_core/executables/: CMakeLists.txt
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/solution/mini_core/src/: CMakeLists.txt
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/solution/mini_core/src/data_structures/: matrix.h
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/solution/mini_core/src/geometry/: geometry2d.h
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/solution/mini_core/src/messages/: base_sensor_message.cpp  base_sensor_message.h  odometry_message.h
Sistemi Operativi/source 22-23/so_02b_compilers_and_build_systems/exercise/solution/mini_core/src/utils/: id_context.h  identifiable.h  property.h  property_container.cpp  property_eigen.cpp  property_eigen.h  property_identifiable.h  property_macros.h
Telecomunicazioni/Esami telecomunicazioni/: ESERCIZIO 12_06_23.docx
Telecomunicazioni/Esercizi Capitoli/: Esercizi Capitolo 3 - ARQ.pptx
Telecomunicazioni/FCI_23-24 Moodle/: 0_Presentazione_corso_AA_23-24_canale2.pptx  0_Presentazione_corso_AA_23_24_canale1.pptx
Telecomunicazioni/script/: quiztele.py  quiztele.spec  readme.txt
(+660 files in other folders)
